🐛 FIX: Collapse Tweaks
Fix padding and light background issues

--- a/src/collapse/style.scss
+++ b/src/collapse/style.scss
@@ -7,3 +7,6 @@
 .wp-block-mayflower-blocks-collapsibles .card {
 	margin-bottom: 0;
 }
+.wp-block-mayflower-blocks-collapsibles .card-body > *:last-child {
+	margin-bottom: 0;
+}
